--- a/loon.conf
+++ b/loon.conf
@@ -91,6 +91,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=全球直连, enabled=true
 
 [Rule]
+DOMAIN,music.youtube.com,美国节点
 GEOIP,CN,DIRECT
 FINAL,法外狂徒
 
