--- a/loon.conf
+++ b/loon.conf
@@ -51,7 +51,7 @@ disable-udp-ports = 443
 苹果服务 = select,DIRECT,网速超快,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple_1.png
 网易音乐 = select,网易云解锁,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
 奈飞视频 = select,网速超快,新加坡节点,香港节点,台湾节点,美国节点,韩国节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
-油管视频 = select,网速超快,香港节点,新加坡节点,韩国节点,美国节点,台湾节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+油管音乐 = select,网速超快,香港节点,新加坡节点,韩国节点,美国节点,台湾节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 巴哈姆特 = select,网速超快,台湾节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bahamut.png
 电报消息 = select,网速超快,香港节点,新加坡节点,美国节点,台湾节点,韩国节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 国外媒体 = select,网速超快,新加坡节点,香港节点,台湾节点,韩国节点,美国节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Infuse.png
