--- a/loon.conf
+++ b/loon.conf
@@ -45,13 +45,11 @@ disable-udp-ports = 443
 
 [Proxy Group]
 # 自行选择
-
-
-网速超快 = url-test, url = http://www.gstatic.com/generate_204, interval = 600, tolerance = 200,DIRECT,所有节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
+网速超快 = select,DIRECT,所有节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
 苹果服务 = select,DIRECT,网速超快,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple_1.png
 网易音乐 = select,网易云解锁,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
 奈飞视频 = select,网速超快,新加坡节点,香港节点,台湾节点,美国节点,韩国节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
-油管音乐 = select,网速超快,香港节点,新加坡节点,韩国节点,美国节点,台湾节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+油管视频 = select,网速超快,香港节点,新加坡节点,韩国节点,美国节点,台湾节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 巴哈姆特 = select,网速超快,台湾节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bahamut.png
 电报消息 = select,网速超快,香港节点,新加坡节点,美国节点,台湾节点,韩国节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 国外媒体 = select,网速超快,新加坡节点,香港节点,台湾节点,韩国节点,美国节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Infuse.png
@@ -80,7 +78,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Gua
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TestFlight/TestFlight.list, policy=网速超快, tag=TestFlight, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=苹果服务, tag=苹果服务, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/NetEaseMusic/NetEaseMusic.list, policy=网易音乐, tag=网易音乐, enabled=true
-https://xxjqr.github.io/record/youtubemusic.list, policy=油管音乐, tag=油管音乐, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list, policy=油管视频, tag=油管视频, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Netflix/Netflix.list, policy=奈飞视频, tag=奈飞视频, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Bahamut/Bahamut.list, policy=巴哈姆特, tag=巴哈姆特, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=网速超快, tag=国外媒体, enabled=true
