--- a/loon.conf
+++ b/loon.conf
@@ -63,7 +63,7 @@ disable-udp-ports = 443
 新加坡节点 = select,新加坡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
 韩国节点 = select,韩国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
 日本节点 = select,日本,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-美国节点 = select,美国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+美国节点 = url-test,美国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
 
 [Remote Filter]
 所有节点 = NameRegex, FilterKey = "^"
@@ -93,6 +93,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 [Rule]
 GEOIP,CN,DIRECT
 FINAL,法外狂徒
+user-agent,*YouTubeMusic*,美国节点
 
 [Rewrite]
 
