--- a/loon.conf
+++ b/loon.conf
@@ -47,7 +47,7 @@ disable-udp-ports = 443
 # 自行选择
 
 
-网速超快 = url-test,所有节点,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
+网速超快 = select,所有节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
 苹果服务 = select,DIRECT,网速超快,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple_1.png
 网易音乐 = select,网易云解锁,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
 奈飞视频 = select,网速超快,新加坡节点,香港节点,台湾节点,美国节点,韩国节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
