--- a/loon.conf
+++ b/loon.conf
@@ -64,6 +64,8 @@ disable-udp-ports = 443
 韩国节点 = select,韩国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
 日本节点 = select,日本,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
 美国节点 = url-test,美国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+YouTube专用 = url-test,非香港节点,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://cdn.icon-icons.com/icons2/4023/PNG/96/hkg_hk_hongkong_hong_kong_flag_icon_255815.png
+
 
 [Remote Filter]
 所有节点 = NameRegex, FilterKey = "^"
